--- a/acumos-portal-fe/src/main/webapp/css/home.css
+++ b/acumos-portal-fe/src/main/webapp/css/home.css
@@ -85,7 +85,7 @@ position:relative;
 .slide-content .slide-text{float:left; width:61%;}
 .slide-content .image-container, .hasClass.initialVal .slide-content .image-container{/* float:left; */ margin:15px 0 0 17px; /* width: 32% */ max-width: 372px; height: 260px; float:right;}
 .hasClass .slide-content .image-container{margin:15px 0 0 17px; width: 35%;  float:right;}
-.slide-content .image-container img{width:100%;}
+.slide-content .image-container img{width:auto; max-height: 260px !important; }
  /* discover*/
 .hasClass .discover{background-image:url("../images/Homepage_brain.png"); background-repeat:no-repeat; background-position:center 80px; min-height:560px; position:relative; /* width: 100%; */ width:1280px; margin: 0 auto 20px;}
 .hasClass.initialVal .discover, .discover{background-image:url("../images/Homepage_brain.png"); background-repeat:no-repeat; background-position:center 80px; min-height:560px; position:relative; /* width: 100%; */ width:1280px; margin: 0 auto 20px;}
