manage peer changes
Change-Id: I801c0a1c532b898f65cc258c2c05f746a3b02da0
Issue-ID: ACUMOS-3439, ACUMOS-3438
Description: IST: Peer(s) Access :  Issue in the Grant Peers Access Popup
Signed-off-by: Shaik Ghannubee <SG00587246@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/css/styles.css
+++ b/acumos-portal-fe/src/main/webapp/css/styles.css
@@ -1473,7 +1473,7 @@ md-checkbox[disabled] {cursor:not-allowed !important;}
 table tbody tr td a[title^="Remove as Self "],table tbody tr td a[title^="Mark as Self "] {width: 100% !important;}
 
 /************** Grant Peer access table   *************************/
-.grant-peer-access .fed-srch-container{margin-left:5px;}
+.fed-row2 .fed-srch-container{margin-left:5px;}
 
 
 /********** Admin page Federation modal box style **********/
