--- a/acumos-portal-fe/src/main/webapp/css/styles.css
+++ b/acumos-portal-fe/src/main/webapp/css/styles.css
@@ -548,7 +548,7 @@ z-index:2000;
 .marketplace-btn-container .mdl-button {color: #414141}
 
 #tab7-panel .noresult{padding: 15px 0px;}
-#tab7-panel .license-change-option button { margin-right: 15px;}
+#tab7-panel .license-change-option button { margin-left: 15px;}
 /**licensing template changes */
 #licenseOption md-radio-button{display:inline-block;margin-right: 30px;}
 #modelName #create-new-button, #tab7-panel #create-new-button{margin-left: 30px;}
@@ -946,8 +946,8 @@ hr.hor-seperator {border:none; border-bottom: 1px solid #DEDEDE;}
 .license-detail-modal .upload-field { position: relative;    cursor: pointer;    float: right;    height: 26px;    line-height: 14px;    padding: 5px 10px;    border-radius: 3px;
     background: #fff;    color: #2B262D;    border: 1px solid #B1B1B1;}
 .license-detail-modal .upload-file-container .input-div {float: left;}  
-.license-detail-modal .input-upload-button .mdl-button.mdl-js-button[disabled]{ margin-left: 4px; margin-top: 5px;}
-.license-detail-modal .input-upload-button button.btn-secondary{margin-right:0; margin-top:5px; background: #671C9D; color: #fff; height: 34px; border-radius: 0;  border: 1px solid rgba(0,0,0,.12);}
+.license-detail-modal .input-upload-button .mdl-button.mdl-js-button[disabled]{background: #efefef !important; color: #b3b3b3 !important;}
+.license-detail-modal .input-upload-button button.btn-secondary{margin-left: 4px; margin-top: 5px; background: #671C9D; color: #fff; /* height: 34px; */ border-radius: 0;  border: 1px solid rgba(0,0,0,.12);}
 .license-detail-modal .input-div .upload-field{margin-top: 7px; margin-right: 5px;}
 .license-detail-modal .progress-bar-div{display: flex; flex-direction: row; flex-wrap: nowrap;position:relative; border: 1px solid rgba(0,0,0,.12); font-size:11px; margin-top: 5px; float: left;  width: 100%; padding-bottom: 5px;}
 .license-detail-modal .progress-bar-div div{padding: 1px 2px; margin-top:5px; line-height: 14px;}   
