--- a/acumos-portal-fe/src/main/webapp/css/styles.css
+++ b/acumos-portal-fe/src/main/webapp/css/styles.css
@@ -42,6 +42,7 @@ b{font-family: 'Open Sans', sans-serif !important;}
 .wrap_text {word-break: normal;}
 .word_break{word-break:break-all;}
 .no_margin{margin:0px !important;}
+.no_padding{padding:0px !important;}
 
 .rowcontainer {clear: both;margin-bottom: 15px;}
 .page-wrapper {padding: 10px 20px 15px 20px;}
@@ -1571,6 +1572,9 @@ input[type="text"].medium-textbox {width: 300px;}
 .mdl-tabs__tab .tab-maintained_logs {width:25px; height:16px;background: url("../images/admin-dashboard/mbl_inactive.png") no-repeat center center; margin-right:7px;}
 .mdl-tabs__tab.is-active .tab-maintained_logs {background: url("../images/admin-dashboard/mbl_active.png") no-repeat center center; margin-right:7px;}
 
+.create_bkp_inner_tbl{width:100%; border-collapse: collapse;}
+.create_bkp_inner_tbl td{background-color: #f3f1f5;}
+.create_bkp_inner_tbl thead th{font-size:13px !important; font-weight:600 !important;}
 /******** Maintained Backup Logs CSS end *****/
 
 /*************Admin User page style End ***************/
