--- a/acumos-portal-fe/src/main/webapp/css/styles.css
+++ b/acumos-portal-fe/src/main/webapp/css/styles.css
@@ -1560,10 +1560,11 @@ input[type="text"].medium-textbox {width: 300px;}
 .btn-valign-horizontal {position: relative; top:1px;height:35px;}
 .btn-valign-horizontal2 {position: relative; top:1px;}
 .popup-input-container md-select {height:31px;}
+.repo_name_msg{width:300px;}
 
 .items-align-horizontal {flex-direction: row; flex-wrap: nowrap; justify-content: flex-start;}
 .items-align-horizontal *:not(:last-child) {margin-right: 10px;}
-.vertical-bottom-alignment {align-self: flex-end;}
+.vertical-bottom-alignment {align-self: flex-start; margin-top:28px;}
 .margin-left-auto {margin-left: auto;}
 .btn-icon-valign-horizontal {height: 33px;padding:0 5px; min-width: 20px;margin-bottom:2px;}
 .grid-small-text {font-size: 11px; color:#999;margin-left: 7px;}
