On-Boarding History Pipe changes
Change-Id: Idfb7340e60a7d9612a4d66fac9447f59a0a6293c
Issue-Id: ACUMOS-3571
Description: On-Boarding History In progress text need to display in orange color and in the status field space is missing in In Progress
Signed-off-by: mcapraful <PD00618320@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/css/onBoardingCSS.css
+++ b/acumos-portal-fe/src/main/webapp/css/onBoardingCSS.css
@@ -407,7 +407,7 @@ md-tabs-content-wrapper {
 
 .history-error{color:red;}
 .history-success{color:green;}
-.history-progress{color:orange;}
+.history-progress{color: #f98868;}
 
 .timeline-on-brd-cont {padding-left: 20px;padding-right: 20px;}
 .pdgLtRtSml {padding: 0px 10px;}
