--- a/acumos-portal-fe/src/main/webapp/css/model-workflow.css
+++ b/acumos-portal-fe/src/main/webapp/css/model-workflow.css
@@ -1614,6 +1614,7 @@ position:relative;
 #manage-models .ql-editor p{word-break: break-word; word-wrap: break-word;  overflow-wrap: break-word;
 -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto;}
 .popovers.model-description .ql-container.ql-snow .ql-editor h2{color: initial;}
+.popovers.model-description .ql-container.ql-snow .ql-editor p{display:inline-block !important;}
 .popovers .ql-container.ql-snow .ql-editor h1, .popovers .ql-container.ql-snow .ql-editor h2, .popovers .ql-container.ql-snow .ql-editor h3,
 .popovers .ql-container.ql-snow .ql-editor h1 a, .popovers .ql-container.ql-snow .ql-editor h2 a, .popovers .ql-container.ql-snow .ql-editor h3 a{font-weight:600;}
 .popovers .ql-container.ql-snow .ql-tooltip{margin-top: -10px;  padding: 2px 12px;}
