Support LUM assetUsageDenialSummary - LUM 0.28.0
- Updated SV modal to provide summary and detailed data if available
- Changed SV model to have dynamic header Right to use status (if rtu related)
- Make sure dialog is scrollable and doesn't overflow off the page if there are numerous details

Issue-Id: ACUMOS-3601

Change-Id: I716b47101a4c5db55756ead9f7ce1bb905a3202e
Signed-off-by: justin14 <justin.early@est.tech>

--- a/acumos-portal-fe/src/main/webapp/css/styles.css
+++ b/acumos-portal-fe/src/main/webapp/css/styles.css
@@ -2058,7 +2058,7 @@ padding: 20px;background:#e5e5e5;}
 .disabledButton { pointer-events: none;  opacity: 0.4; }
 /***** Sign-in promt modal start ********/
 .sign-in-promt-modal-box {width: 400px;margin-left: auto; margin-right: auto;}
-.sign-in-promt-modal-box .md-dialog-content {min-height: 80px;}
+.sign-in-promt-modal-box .md-dialog-content {min-height: 80px;max-height: 90vh;}
 
 /***** Sign-in promt modal end ********/
 
