--- a/acumos-portal-fe/src/main/webapp/css/styles.css
+++ b/acumos-portal-fe/src/main/webapp/css/styles.css
@@ -408,7 +408,7 @@ md-dialog .md-dialog-content {padding: 20px;}
 .link-orange {color: rgb(253,134,56);}
 
 .rating {clear: both;}
-.rating span i {font-size: 14px; width: 17px; cursor: pointer;}
+.rating span i {font-size: 14px; width: 17px; }
 .rating span i:hover {color: rgb(253,134,56);}
 .rating span .fa-star {color: #F86132;}
 .mp-para {margin-bottom: 6px; margin-top: 3px; font-size:13px;max-width: 200px; width: 100%; text-overflow: ellipsis;
