Text is overlapping on the cloud options
Issue-ID: ACUMOS-3655.

Acu Compose: Deploy to Cloud: Text is overlapping on the cloud options

Change-Id: Ic7997fa978b2cb2cb631ef9b6f3722815c168a79
Signed-off-by: Sachin Kanase <SK00500818@TechMahindra.com>
(cherry picked from commit 8cae4ceea57f77475559c51966663d0cedd1bd31)

--- a/acumos-portal-fe/src/main/webapp/css/styles.css
+++ b/acumos-portal-fe/src/main/webapp/css/styles.css
@@ -1972,6 +1972,11 @@ md-option.dc-att-cloud:hover { background: none !important; background: #fff url
 .opacityZero .md-text{opacity:0 !important;}
 
 .deploy-to-cloud[disabled], .deploy-to-cloud[disabled]:hover{opacity:0.3 !important; cursor: not-allowed; pointer-events:none;}
+.acu-compose .deploy-to-cloud[disabled], .deploy-to-cloud[disabled]:hover{opacity:1 !important;}
+.acu-compose .deploy-to-cloud[disabled]:after { content: ""; background: white; display: block; height: 100%; width: 100%; opacity: 0.6;}
+.acu-compose .deploy-to-cloud[disabled] {padding: 0;}
+
+
 .deploy-to-cloud-input input[disabled], .deploy-to-cloud-input input[disabled]:hover,
 .deploy-to-cloud-input input[disabled] + span 
 {opacity:0.3; cursor: not-allowed; }
