--- a/acumos-portal-fe/src/main/webapp/css/styles.css
+++ b/acumos-portal-fe/src/main/webapp/css/styles.css
@@ -147,7 +147,7 @@ b{font-family: 'Open Sans', sans-serif !important;}
 .tbl-notification-list tbody tr td i {margin-left: 15px;}
 .tbl-notification-list tbody tr td.read-notification {background: #f5f2f8; font-weight: 400;color:#91819d}
 .tbl-notification-list tbody tr td.sub-container span {white-space: normal !important;}
-.notification-btn-container {display: flex;flex-wrap:nowrap;justify-content: space-between; align-items: center;}
+.notification-btn-container {display: flex;flex-wrap:nowrap;justify-content: space-between; align-items: center; padding: 20px 0 0 0;}
 .notification-btn-container button { margin-right: 15px}
 .notification-btn-container button i { font-size: 13px; margin-right: 4px;}
 .scroll-table{height:250px; overflow-x:auto; display:block;} 
@@ -2510,7 +2510,6 @@ label.model-name{color:#0366d6;}
 	.mp-grid-list-row .griditem-title {max-width: 150px;}
 	.rating span i {width: 15px;}
 	.rating-list-fav-button {margin-bottom:0;}
-	
 	
 	.password-container1 { display:flex; flex-wrap: nowrap; justify-content: space-between;}
 	.password-container1 .eyebutton { width: 50px;}
