--- a/acumos-portal-fe/src/main/webapp/css/styles.css
+++ b/acumos-portal-fe/src/main/webapp/css/styles.css
@@ -75,6 +75,7 @@ b{font-family: 'Open Sans', sans-serif !important;}
 #uploadFile .upload-txtbox, #publicUploadFile .upload-txtbox{width: 100%; height:33px;}
 .remove-datalist-icon input::-webkit-calendar-picker-indicator {display: none;}
 .spacebetween{justify-content:space-between !important;}
+.nopadding{padding:0 !important;}
 /*********** Common CSS classes end  ************/
 
 /*********** Icons section start ************/
@@ -1612,6 +1613,7 @@ input[type="text"].medium-textbox {width: 300px;}
 .gridicon-edit {display:inline-block; width: 11px; height: 11px; background: url("../images/general-icons/grid_action_edit.png") no-repeat center center;}
 .gridicon-delete {display:inline-block; width: 9px; height: 11px; background: url("../images/general-icons/grid_action_delete.png") no-repeat center center;}
 .gridicon-delete.disabled{opacity:0.3;}
+.gridicon-edit.disabled{opacity:0.3;}
 .gridicon-approve {display:inline-block; width: 19px; height: 19px; background: url("../images/general-icons/grid_action_approveX.png") no-repeat center center;}
 .gridicon-deny {display:inline-block; width: 19px; height: 19px; background: url("../images/general-icons/grid_action_denyX.png") no-repeat center center;}
 .gridicon-archive {display:inline-block; width: 22px; height: 16px; background: url("../images/general-icons/archive.png") no-repeat center center;}
@@ -2500,6 +2502,8 @@ label.model-name{color:#0366d6;}
     display: block;
     white-space:nowrap;
 } 
+	
+md-select-menu md-content md-option[selected], md-select-menu md-content md-option[selected]:focus{color:#2f2f2f;}
 /*********** MEDIA QUERIES SECTION START************/
 
 @media (max-width: 450px) {
