dropdown background color fix
ISSUE_ID:ACUMOS-3871

Change-Id: Ib5a35e8aa9beb7c514ce51e67a5753347c5c1dff
Signed-off-by: Ashwini Chitnis <ac00493930@techmahindra.com>
(cherry picked from commit c7d69fb7d3379d54971cf7a9ca2a71113b783962)

--- a/acumos-portal-fe/src/main/webapp/css/styles.css
+++ b/acumos-portal-fe/src/main/webapp/css/styles.css
@@ -1951,6 +1951,9 @@ div[id^="select_container_"] md-content {padding-top: 0; padding-bottom:0;}
 div[id^="select_container_"] md-option {border-bottom: 1px solid #d5d5d5;}
 div[id^="select_container_"] md-option .md-text {/* opacity: 0; */}
 
+md-select-menu md-content md-option:not([disabled]):focus {background: rgb(255,255,255);}
+md-select-menu md-content md-option:not([disabled]):focus[selected]{background: rgb(238,238,238);}
+
 .md-select-menu-container .dc-microsoft-azure .md-ripple-container {display: none;}
 .dcl-list md-option:hover {background-color: none;}
 
